--- a/citizen.theme.css
+++ b/citizen.theme.css
@@ -276,7 +276,7 @@ button.button-38aScr.da-button.lookFilled-1Gx00P.colorBrand-3pXr91.sizeSmall-2cS
 /* - */
 .feedCarousel-3F1_Q-.carousel-1Mb2Ud::before {
     content: "";
-    background-image: url(https://raw.githubusercontent.com/CorbsEditor/Dream-Frame/master/resources/changelog.png);
+    background-image: url(https://image.prntscr.com/image/u80gUOwPTGG8Nk5EQVy9fg.png);
     position: absolute;
     width: 100%;
     height: 650px;
